Fixed bugs in sidenav and array/arraylist double bordering

--- a/SPA attempt/styles/dsStyles.css
+++ b/SPA attempt/styles/dsStyles.css
@@ -151,9 +151,9 @@ h2 {
   min-width: 50%;
 
   position: absolute;
-    /*left: 400px;*/
-    top: 325px;
-    /*right: 20px;*/
+  /*left: 400px;*/
+  top: 325px;
+  /*right: 20px;*/
 }
 
 #SstackElements {
@@ -171,6 +171,8 @@ h2 {
 
 .Aelems, .ALelems {
   border: 1px solid #DB7093;
+  /*border-bottom: 1px solid #DB7093;
+  border-right: 1px solid #DB7093;*/
   background-color: #f2f2f2;
   padding: 20px;
   font-size: 20px;
@@ -206,7 +208,7 @@ h2 {
 }
 
 .SstackElems {
-  border: 1px solid #DB7093;
+    border: 1px solid #DB7093;
     background-color: #f2f2f2;
     padding: 20px;
     font-size: 20px;
@@ -262,10 +264,12 @@ h2 {
     animation: slide 0.5s forwards;
     animation-delay: 1s;
 }*/
-
-#Aindex0, #ALindex0, #LLindex0, #Sindex0 {
+#Aindex0, #ALindex0 {
   display: none;
-  border-left: 1px solid brown;
+}
+
+#LLindex0, #Sindex0 {
+  display: none;
   animation-name: flash;
   animation-duration: 1s;
 }
